mdapioutput/objects/PromotionAccount__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Accounts</relationshipLabel>
        <relationshipName>PromotionAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CORE_IsActivePromotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Accounts</relationshipLabel>
        <relationshipName>PromotionAccounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SellInEndDate__c</fullName>
        <label>Sell In End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellInStartDate__c</fullName>
        <label>Sell In Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>